PolyPage Change Log


0.8.3

- Split extensions out into seperate files to make mix'n'match easier.


0.8.2

- Fixed a regression which broke alphabetical sorting.
- Added a new extension to handle keyboard shortcuts. (ALT + first_char_in_state_name toggles the state)
- Added a friendly error message when you have syntax errors in class names.


0.8.1

- Readme updates.
- extensions now take a 'polypage' option to assist with custom bindings.
- API Change, ppbase options are now passed in via $(el).polypage({ base: {} }); so it is inline with other extensions.


0.8

- This release is a big refactoring to split the PolyPage logic into a Base library and series of smaller modules.
- A public event API for triggering page state changes and being notified of them.
- The plugin now is a real JS object so theoretically you could have several PolyPage's co-existing on one html page.
- PolyPage now follows the jQuery standard and is fully chainable, and scoped, in most cases $(document).polypage() is fine.
- The GUI, Event bindings and Cookie support is now 100% independent of the polypage Base functionality. You can now run polypage with no GUI or DOM injection at all.
- A decent amount of high level test coverage on the key components.


0.7

* Officially note the MooTools branch.
* Added a test suite around the public API, this was long overdue, sorry.
* Pulled in some of Yoan's changes to allow #state tiggering on 'a' and 'form' elements.
* Started a skins folder based on Rich's suggestion, if you've got any good ones I would love to have them in the repo.


0.6

* PolyPage can now be intialized on a jQuery collection using the $(selector).polypage() syntax. the matched elements are used as the container for the navigation controls. This is now the recommended way to initialize jQuery although the $.polypage.init() method still works for backwards compatibility at the moment. (Thanks to Phil Oye)
* Some refactoring of cookie support and setState();