@@ -1,5 +1,5 @@
 /*
-* PolyPage 0.8.2
+* PolyPage 0.8.3 [dev]
 *
 * Copyright (c) 2009 Andy Kent
 * Dual licensed under the MIT and GPL licenses:
@@ -15,7 +15,9 @@
 
 (function($) {
 
- $.polypage = {};
+ $.polypage = {
+   extensionList: []
+ };
 
 
  // ============================
@@ -23,18 +25,12 @@
  // ============================
 
  $.fn.polypage = function(opts) {
-   var opts = $.extend({
-     base:{},
-     events:{},
-     gui:{},
-     cookie:{},
-     keyboard:{}
-   }, opts || {});
-   this.ppBase(opts.base);
-   if(opts.events && this.ppEvents) this.ppEvents(opts.events);
-   if(opts.gui && this.ppGUI) this.ppGUI(opts.gui);
-   if(opts.cookie && this.ppCookie) this.ppCookie(opts.cookie);
-   if(opts.keyboard && this.ppKeyboard) this.ppKeyboard(opts.keyboard);
+   var opts = opts || {};
+   this.ppBase(opts.base || {});
+   for(var i in $.polypage.extensionList) {
+     var extension = $.polypage.extensionList[i];
+     if(this['pp'+extension]) this['pp'+extension](opts[extension.toLowerCase()] || {});
+   }
    return this
  };
 
@@ -196,6 +192,7 @@
  // ====================
 
  $.polypage.extension = function(__extensionName__, __defaults__, __prototype__) {
+   $.polypage.extensionList.push(__extensionName__);
    // create a jQuery chainable helper
    $.fn['pp'+__extensionName__] = function(opts) {
      return this.each(function() {
